# frida-clr

./: .gitignore  .gitmodules  BSDmakefile  Makefile  README.md  configure  configure.bat  detect-netfx.py  frida-clr.vcxproj  frida-clr.vcxproj.filters  make.bat  meson.build
examples/HelloFrida/: App.xaml  App.xaml.cs  HelloFrida.csproj  HelloFrida.sln  MainWindow.xaml  MainWindow.xaml.cs
examples/HelloFrida/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: Application.cpp  Application.hpp  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  Frida.sln  Marshal.cpp  Marshal.hpp  Module.cs  Process.cpp  Process.hpp  Runtime.cpp  Runtime.hpp  Script.cpp  Script.hpp  Session.cpp  Session.hpp  meson.build
src/Frida.NET/: Frida.NET.csproj  FridaApplication.cs  FridaCrash.cs  FridaDevice.cs  FridaDeviceManager.cs  FridaProcess.cs  FridaScript.cs  FridaSession.cs  meson.build
src/Frida.NET.Bindings/: Frida.NET.Bindings.csproj  helper.py  meson.build
src/Frida.NET.Runtime/: Frida.NET.Runtime.csproj  Frida.def  frida-wrapper.c  meson.build
src/Frida.NET/Data/: ScriptOptions.cs  SessionOptions.cs  SpawnOptions.cs
src/Frida.NET/Events/: DeviceAddedEventArgs.cs  DeviceChangedEventArgs.cs  DeviceLostEventArgs.cs  DeviceRemovedEventArgs.cs  ScriptDestroyedEventArgs.cs  ScriptMessageEventArgs.cs  SessionDetachedEventArgs.cs
src/Frida.NET/Helpers/: LazyEvent.cs
src/Frida.NET/Module/: Importer.cs  Initializer.cs
subprojects/: frida-core.wrap
tools/: detect-version.py
tools/girtool/: initialize-gir-core.py  meson.build
